--- a/css/calc/teploizoliacia.css
+++ b/css/calc/teploizoliacia.css
@@ -20,16 +20,101 @@ body {
 	-webkit-box-sizing: border-box;
 	        box-sizing: border-box;
 }
-input[placeholder] {
+.teploizol_form_main input[placeholder] {
 	font-family: OpenSans;
 	text-indent: 3px;
 	opacity: 1;
 	transition: opacity 0.3s ease;
 }
 
-.input_label {
+.teploizol_form_main  .input_label {
 	font-size: 14px;
 }
+
+
+/*кастомный чекбокс2 - начало*/
+	
+.teploizol_form_main  .cbx {
+	margin: auto;
+	-webkit-user-select: none;
+	user-select: none;
+	cursor: pointer;
+}
+
+.teploizol_form_main  .cbx span {
+	display: inline-block;
+	vertical-align: middle;
+	transform: translate3d(0, 0, 0);
+}
+
+.teploizol_form_main  .cbx span:first-child {
+	position: relative;
+	width: 18px;
+	height: 18px;
+	border-radius: 3px;
+	transform: scale(1);
+	vertical-align: middle;
+	border: 1px solid #9098A9;
+	transition: all .2s ease;
+}
+
+.teploizol_form_main  .cbx span:first-child svg {
+	position: absolute;
+	top: 3px;
+	left: 2px;
+	fill: none;
+	stroke: #FFFFFF;
+	stroke-width: 2;
+	stroke-linecap: round;
+	stroke-linejoin: round;
+	stroke-dasharray: 16px;
+	stroke-dashoffset: 16px;
+	transition: all .3s ease;
+	transition-delay: .1s;
+	transform: translate3d(0, 0, 0);
+}
+
+.teploizol_form_main  .cbx span:first-child:before {
+	content: "";
+	width: 100%;
+	height: 100%;
+	background:#4bc970;
+	display: block;
+	transform: scale(0);
+	opacity: 1;
+	border-radius: 50%;
+}
+
+.teploizol_form_main  .cbx span:last-child {
+	padding-left: 8px;
+}
+
+.teploizol_form_main  .cbx:hover span:first-child {
+	border-color: #4bc970;
+}
+
+.teploizol_form_main  .inp-cbx:checked + .cbx span:first-child {
+	background:#4bc970;
+	border-color:#4bc970;
+	animation: wave .4s ease;
+}
+
+.teploizol_form_main  .inp-cbx:checked + .cbx span:first-child svg {
+	stroke-dashoffset: 0;
+}
+
+.teploizol_form_main  .inp-cbx:checked + .cbx span:first-child:before {
+	transform: scale(1.5);
+	opacity: 0;
+	transition: all .6s ease;
+}
+
+@keyframes wave {
+	50% {
+		transform: scale(0.9);
+	}
+}	
+/*кастомный чекбокс2 - конец*/
 
 
 /*кастомный чекбокс (начало)*/
@@ -193,7 +278,8 @@ input[placeholder] {
 	.teploizol_form_main input[type="radio"],
 	.teploizol_form_main input[type="checkbox"] {
 		margin: 0 4px 8px 0;
-	}
+	} 
+
 	.teploizol_form_main select {
 		padding: 6px;
 		height: 32px;
@@ -351,7 +437,8 @@ input[placeholder] {
 		background-image: linear-gradient(45deg, rgba(255, 255, 255, .2) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .2) 50%, rgba(255, 255, 255, .2) 75%, transparent 75%, transparent);
 	}
 
-	.teploizol_form_main .roof {
+	.teploizol_form_main .roof,
+	.teploizol_form_main .wall {
 		display: flex;
 		flex-direction: column;
 		flex-wrap: nowrap;
@@ -359,8 +446,8 @@ input[placeholder] {
 		align-items: center;
 		align-content: center;
 	}
-	.teploizol_form_main .roof_title__h2 {
-
+	.teploizol_form_main .roof_title__h2,
+	.teploizol_form_main .wall_title__h2 {
 		width: auto;
 		margin: 20px 0;
 		text-align: center;
@@ -373,7 +460,8 @@ input[placeholder] {
 		font-size: 19px;
 	}
 
-	.teploizol_form_main .roof__type {
+	.teploizol_form_main .roof__type,
+	.teploizol_form_main .wall__type {
 		width: 300px;
 		margin: 0 auto;
 		display: grid;
@@ -384,7 +472,8 @@ input[placeholder] {
 	.teploizol_form_main .odnoskat_roof,
 	.teploizol_form_main .shatr_roof,
 	.teploizol_form_main .valm_roof,
-	.teploizol_form_main .mansard_roof  {
+	.teploizol_form_main .mansard_roof,
+	.teploizol_form_main .karkas_wall {
 		width: 300px;
 		margin: 1px;
 		margin: 0 auto;
@@ -394,7 +483,8 @@ input[placeholder] {
 	.teploizol_form_main .odnoskat_roof__form,
 	.teploizol_form_main .shatr_roof__form,
 	.teploizol_form_main .valm_roof__form,
-	.teploizol_form_main .mansard_roof__form {
+	.teploizol_form_main .mansard_roof__form,
+	.teploizol_form_main .karkas_wall__form {
 		position: relative;
 		width: 295px;
 		background-color: #f9fafa;
@@ -409,7 +499,8 @@ input[placeholder] {
 	.teploizol_form_main .odnoskat_roof__checkbox,
 	.teploizol_form_main .shatr_roof__checkbox,
 	.teploizol_form_main .valm_roof__checkbox,
-	.teploizol_form_main .mansard_roof__checkbox {
+	.teploizol_form_main .mansard_roof__checkbox,
+	.teploizol_form_main .karkas_wall__checkbox {
 		display: grid;
 		grid-template-columns: 1fr 1fr;
 		gap: 5px 5px;
